<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    tools:context="androidhive.info.materialdesign.activity.HomeFragment">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/write" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form_title"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>



            <EditText
                android:id="@+id/age_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/edittext_top_bg"
                android:padding="10dp"
                android:hint="@string/form_age"
                android:numeric="integer"
                android:textColorHint="#bbbbbb"/>
            <EditText
                android:id="@+id/weight_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:hint="@string/form_weight"
                android:numeric="decimal"
                android:textColorHint="#bbbbbb" />
            <EditText
                android:id="@+id/workout_time_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_default_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:hint="@string/form_workout"
                android:numeric="integer"
                android:textColorHint="#bbbbbb" />
            <EditText
                android:id="@+id/calories_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bottom_bg"
                android:layout_marginTop="-2dp"
                android:padding="10dp"
                android:hint="@string/form_calories"
                android:numeric="decimal"
                android:textColorHint="#bbbbbb" />

            <RadioGroup
                android:id="@+id/radioGrp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingTop="8dp"
                android:paddingRight="0dp">

                <RadioButton
                    android:id="@+id/radioM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:text="@string/form_male"
                    android:buttonTint="@color/male"/>

                <RadioButton
                    android:id="@+id/radioF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:text="@string/form_female"
                    android:buttonTint="@color/female"/>
            </RadioGroup>

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="4dp"
                android:text="@string/btn_confirm"
                android:background="@drawable/button_default_bg"
                />
            <Button
                android:id="@+id/clear_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="4dp"
                android:text="@string/btn_clear"
                android:background="@drawable/button_default_bg"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
