<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_margin="2dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/options_title"
            android:textColor="#fff"
            android:textSize="15dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/to_drag_title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/option_1"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/option"
                    android:gravity="center"
                    android:text="@string/option_1"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/option_2"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/option"
                    android:gravity="center"
                    android:text="@string/option_2"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/option_3"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/option"
                    android:gravity="center"
                    android:text="@string/option_3"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/drop_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/to_drop_title" />

            <TextView
                android:id="@+id/choice_1"
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/choice"
                android:gravity="center"
                android:text="@string/choice_1"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/choice_2"
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/choice"
                android:gravity="center"
                android:text="@string/choice_2"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/choice_3"
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/choice"
                android:gravity="center"
                android:text="@string/choice_3"
                android:textColor="@color/colorPrimary" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/reset_optimizations"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/undo"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />
                <ImageView
                    android:id="@+id/confirm_optimizations"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/check"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
