<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    tools:context="androidhive.info.materialdesign.activity.HomeFragment">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:text="@string/start_workout_txt"
                android:textSize="15dp" />
            <Button
                android:id="@+id/start_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/btn_start"
                android:background="@drawable/button_default_bg"
                />

            <Button
                android:id="@+id/stop_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/btn_stop"
                android:background="@drawable/button_default_bg"
                />
            <LinearLayout
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/stat_icon1"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/time_icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:text="@string/stat_icon1_txt"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/stat_icon2"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/burned_icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:text="@string/stat_icon2_txt"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>

