<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    tools:context="androidhive.info.materialdesign.activity.HomeFragment">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:text="@string/elaborate_activity_text"
                android:textSize="15dp" />
            <Button
                android:id="@+id/elaborate_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/btn_elaborate"
                android:background="@drawable/button_default_bg"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="#fff">
                <TextView
                    android:id="@+id/opt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center"
                    android:text="@string/optimizations"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="6dp"
                    android:paddingLeft="6dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/opt_icon1"
                        android:src="@drawable/number1"
                        android:layout_width="15dp"
                        android:layout_marginLeft="3dp"
                        android:layout_height="15dp" />
                    <TextView
                        android:id="@+id/opt_txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="opt1"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="3dp"
                    android:paddingLeft="6dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/opt_icon2"
                        android:src="@drawable/number2"
                        android:layout_width="15dp"
                        android:layout_marginLeft="3dp"
                        android:layout_height="15dp" />
                    <TextView
                        android:id="@+id/opt_txt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="opt2"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="6dp"
                    android:paddingLeft="6dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/opt_icon3"
                        android:src="@drawable/cross"
                        android:layout_width="15dp"
                        android:layout_marginLeft="3dp"
                        android:layout_height="15dp" />
                    <TextView
                        android:id="@+id/opt_txt3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="opt3"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/options_icon1"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/options_icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:text="@string/options_icon1_txt"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/preferences_icon2"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/preferences_icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:text="@string/preferences_icon2_txt"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
